--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,14 @@
         - run: flutter pub get
         - run: flutter test
         - run: flutter build apk --debug --split-per-abi
+        - run: |
+            flutter build ios --no-codesign
+            cd build/ios/iphoneos
+            mkdir Payload
+            cd Payload
+            ln -s ../Runner.app
+            cd ..
+            zip -r app.ipa Payload
           name: Push to Release
           uses: ncipollo/release-action@v1
           with:
